--- a/index.html
+++ b/index.html
@@ -1748,7 +1748,7 @@ block = {
   CY  : mouse.CY
 },
 imags = [
-  'https://images.pexels.com/photos/4245826/pexels-photo-4245826.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940',
+  'bg.jpg',
 ];
 
 $('.block').on('mousemove', function(e) {
