--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 overflow: hidden;
                 background-size: cover; /* This will make the background image cover the entire div */
                 background-position: center;
-                background-image:url('https://images.pexels.com/photos/4245826/pexels-photo-4245826.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
+                background-image:url("bg.jpg")
               }
               
               #bottom{
