--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 overflow: hidden;
                 background-size: cover; /* This will make the background image cover the entire div */
                 background-position: center;
-                background-image:url("bg.jpg")
+                background-image:url("inside.jpg")
               }
               
               #bottom{
