--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 overflow: hidden;
                 background-size: cover; /* This will make the background image cover the entire div */
                 background-position: center;
-                background-image:url("inside.jpg")
+                background-image:url("bg.jpg")
               }
               
               #bottom{
@@ -1748,7 +1748,7 @@ block = {
   CY  : mouse.CY
 },
 imags = [
-  "bg.jpg",
+  "inside.jpg",
 ];
 
 $('.block').on('mousemove', function(e) {
