--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                 height: 50vh;
                 background-color: rgb(12, 12, 12);
                 overflow: hidden;
+                z-index: 9;
+
               }
               
               #main h1{
