--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 width: 100%;
                 height: 50vh;
                 background-color: rgb(12, 12, 12);
-              
+              z-index: 5;
                 overflow: hidden;
               }
               
