--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,9 @@
         <div id="top">
             
             <div id="logo"></div>
-         
+         <div><video autoplay muted loop id="myVideo">
+  <source src="rain.mp4" type="video/mp4">
+</video></div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.1/lottie.min.js"></script>
