--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
         <div id="top">
             
             <div id="logo"></div>
-         <div><video autoplay muted loop id="myVideo">
+         <div id="particle.js"><video autoplay muted loop id="myVideo">
   <source src="rain.mp4" type="video/mp4">
 </video></div>
 
