--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       margin: 0;
       padding: 0;
     }
+     #particles-js {
+      width: 100%;
+      height: 100%;
+      background:black;
+    }
   
             @font-face {
                 font-family: Founder;
